[package]
name = "vleue_kinetoscope"
version = "0.3.1"
edition = "2021"
exclude = ["animated-gif.webp"]
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Animated GIF player for Bevy"
repository = "https://github.com/vleue/vleue_kinetoscope"
homepage = "https://github.com/vleue/vleue_kinetoscope"
documentation = "https://docs.rs/vleue_kinetoscope"
keywords = ["bevy", "animation", "gif"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]

[features]
default = ["gif", "webp"]
gif = ["image/gif"]
webp = ["image/webp"]


[dependencies]
image = { version = "0.25", default-features = false }
thiserror = "1.0"
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_sprite",
    "png",         # TODO: change after https://github.com/bevyengine/bevy/issues/16563
] }

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_window",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "x11",
] }
