[package]
name = "vleue_kinetoscope"
version = "0.4.0"
edition = "2024"
exclude = ["animated-gif.webp"]
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Animated GIF player for Bevy"
repository = "https://github.com/vleue/vleue_kinetoscope"
homepage = "https://github.com/vleue/vleue_kinetoscope"
documentation = "https://docs.rs/vleue_kinetoscope"
keywords = ["bevy", "animation", "gif"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]

[features]
default = ["gif", "webp"]
gif = ["image/gif"]
webp = ["image/webp"]


[dependencies]
image = { version = "0.25", default-features = false }
thiserror = "1.0"
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_image = { version = "0.16.0", default-features = false }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_time = { version = "0.16.0", default-features = false }
bevy_sprite = { version = "0.16.0", default-features = false }


[dev-dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
    "bevy_window",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "x11",
] }
